force-app/main/default/objects/Supporting_Roles__c/Supporting_Roles__c.object-meta.xml
<CustomObject>
    <label>Supporting Roles</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Supporting Participant NO</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supporting Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>