force-app/main/default/objects/Supporting_Roles__c/fields/Contributing_to_this_Research_project__c.field-meta.xml
<CustomField>
    <fullName>Contributing_to_this_Research_project__c</fullName>
    <inlineHelpText>Number of hours per week contributing to this research project:</inlineHelpText>
    <label>Contributing to this Research project:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>