force-app/main/default/objects/Supporting_Roles__c/fields/Description_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Project__c</fullName>
    <inlineHelpText>Description of participation in this project, including any technologies, techniques or skills
to be employed:</inlineHelpText>
    <label>Project Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>