force-app/main/default/objects/Supporting_Roles__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collaborator</fullName>
            </value>
            <value>
                <fullName>Co-investigator</fullName>
            </value>
            <value>
                <fullName>Research Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>