force-app/main/default/objects/Supporting_Roles__c/fields/Total_number_of_hours_per_week_spent__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_hours_per_week_spent__c</fullName>
    <inlineHelpText>Total number of hours per week spent on all research projects:</inlineHelpText>
    <label>Hours / week spent on research project</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>